Add indigo support to custom block textures